--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -33,9 +33,10 @@ a {
 }
 
 button {
+  font-family: $satoshi;
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 24px;
   color: $white;
   border-radius: 12px;
